--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	
-	<link rel="shortcut icon" type="image/x-icon" href="favicon_io/favicon.ico">		
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">		
 	
 	<head>
 		<title>Benjamin J's CV</title>
